# stock_article_reader

./: .flake8  .gitignore  .python-version  pyproject.toml
stock_article_reader/: article.py  reader.py
tests/: test_reader.py  test_stock_article_reader.py
